--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-classnames": "^0.7.3",
+    "prettier-plugin-merge": "^0.7.1",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
